// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when no stats yet 1`] = `
<Styled(Container)>
  <withNavigation(Header)
    eggButton={true}
    goBackButton="Flock"
    title="Chicken"
  />
  <Styled(Content)>
    <ImageViewer
      showModal={true}
      toggleModal={[Function]}
      url="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
    />
    <Styled(ViewNB)
      padder={true}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={true}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropleft"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Styled(H2)
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Chicken1
        </Styled(H2)>
        <Styled(Text)
          style={
            Object {
              "color": "grey",
              "fontSize": 16,
              "height": 20,
            }
          }
        >
          Cuckoo Maran
        </Styled(Text)>
        <Styled(Text)
          style={
            Object {
              "color": "grey",
              "fontSize": 16,
              "height": 20,
            }
          }
        >
          Oct 5, 2016 (1y 11m)
        </Styled(Text)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Styled(Button)
          dark={true}
          transparent={true}
        >
          <Styled(Icon)
            active={true}
            name="more"
            style={
              Object {
                "fontSize": 30,
              }
            }
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={false}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropright"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      padder={true}
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
            }
          }
          style={
            Object {
              "height": 200,
              "width": 200,
            }
          }
        />
      </TouchableOpacity>
    </Styled(ViewNB)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when no weight yet 1`] = `
<Styled(Container)>
  <withNavigation(Header)
    eggButton={true}
    goBackButton="Flock"
    title="Chicken"
  />
  <Styled(Content)>
    <ImageViewer
      showModal={true}
      toggleModal={[Function]}
      url="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
    />
    <Styled(ViewNB)
      padder={true}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={true}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropleft"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Styled(H2)
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Chicken1
        </Styled(H2)>
        <Styled(Text)
          style={
            Object {
              "color": "grey",
              "fontSize": 16,
              "height": 20,
            }
          }
        >
          Cuckoo Maran
        </Styled(Text)>
        <Styled(Text)
          style={
            Object {
              "color": "grey",
              "fontSize": 16,
              "height": 20,
            }
          }
        >
          Oct 5, 2016 (1y 11m)
        </Styled(Text)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Styled(Button)
          dark={true}
          transparent={true}
        >
          <Styled(Icon)
            active={true}
            name="more"
            style={
              Object {
                "fontSize": 30,
              }
            }
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={false}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropright"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      padder={true}
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
            }
          }
          style={
            Object {
              "height": 200,
              "width": 200,
            }
          }
        />
      </TouchableOpacity>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      padder={true}
    >
      <Line />
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 10,
          }
        }
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "color": "grey",
                "fontSize": 17,
                "fontWeight": "bold",
              }
            }
          >
            Total Eggs
          </Styled(Text)>
          <Styled(H2)
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            1
          </Styled(H2)>
          <Styled(Text)
            style={
              Object {
                "height": 20,
              }
            }
          />
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "grey",
                  "fontSize": 17,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            Best Streak
          </Styled(Text)>
          <Styled(H2)
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            0
          </Styled(H2)>
          <Styled(Text)
            style={
              Object {
                "height": 20,
              }
            }
          >
            Days
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
      <Line />
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "grey",
                "fontSize": 17,
                "fontWeight": "bold",
              },
              Object {
                "marginBottom": 10,
              },
            ]
          }
        >
          Last Week
        </Styled(Text)>
        <Styled(ViewNB)
          style={Object {}}
        >
          <Styled(ViewNB)
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Styled(ViewNB)
              key="2018-10-06"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 1,
                    "borderColor": "grey",
                    "borderLeftWidth": 1,
                    "borderTopWidth": 1,
                    "padding": 10,
                  },
                  Object {
                    "backgroundColor": "lightgreen",
                  },
                  Object {
                    "borderColor": "grey",
                    "borderRightWidth": 1,
                  },
                ]
              }
            >
              <Styled(Text)
                style={
                  Object {
                    "color": "grey",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                Oct
              </Styled(Text)>
              <Styled(Text)
                style={
                  Object {
                    "color": "grey",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                6
              </Styled(Text)>
              <Styled(ViewNB)>
                <Styled(Icon)
                  name="checkmark-circle"
                  style={
                    Object {
                      "fontSize": 20,
                    }
                  }
                />
              </Styled(ViewNB)>
            </Styled(ViewNB)>
          </Styled(ViewNB)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly with all stats available 1`] = `
<Styled(Container)>
  <withNavigation(Header)
    eggButton={true}
    goBackButton="Flock"
    title="Chicken"
  />
  <Styled(Content)>
    <ImageViewer
      showModal={true}
      toggleModal={[Function]}
      url="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
    />
    <Styled(ViewNB)
      padder={true}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={true}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropleft"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Styled(H2)
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Chicken1
        </Styled(H2)>
        <Styled(Text)
          style={
            Object {
              "color": "grey",
              "fontSize": 16,
              "height": 20,
            }
          }
        >
          Cuckoo Maran
        </Styled(Text)>
        <Styled(Text)
          style={
            Object {
              "color": "grey",
              "fontSize": 16,
              "height": 20,
            }
          }
        >
          Oct 5, 2016 (1y 11m)
        </Styled(Text)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Styled(Button)
          dark={true}
          transparent={true}
        >
          <Styled(Icon)
            active={true}
            name="more"
            style={
              Object {
                "fontSize": 30,
              }
            }
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={false}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropright"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      padder={true}
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
            }
          }
          style={
            Object {
              "height": 200,
              "width": 200,
            }
          }
        />
      </TouchableOpacity>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      padder={true}
    >
      <Line />
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 10,
          }
        }
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "color": "grey",
                "fontSize": 17,
                "fontWeight": "bold",
              }
            }
          >
            Total Eggs
          </Styled(Text)>
          <Styled(H2)
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            1
          </Styled(H2)>
          <Styled(Text)
            style={
              Object {
                "height": 20,
              }
            }
          />
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "grey",
                  "fontSize": 17,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            Heaviest Egg
          </Styled(Text)>
          <Styled(H2)
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            88.1
          </Styled(H2)>
          <Styled(Text)
            style={
              Object {
                "height": 20,
              }
            }
          >
            Apr 2, 2017
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Styled(Text)
            style={
              Array [
                Object {
                  "color": "grey",
                  "fontSize": 17,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            Best Streak
          </Styled(Text)>
          <Styled(H2)
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            0
          </Styled(H2)>
          <Styled(Text)
            style={
              Object {
                "height": 20,
              }
            }
          >
            Days
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
      <Line />
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Styled(Text)
          style={
            Array [
              Object {
                "color": "grey",
                "fontSize": 17,
                "fontWeight": "bold",
              },
              Object {
                "marginBottom": 10,
              },
            ]
          }
        >
          Last Week
        </Styled(Text)>
        <Styled(ViewNB)
          style={Object {}}
        >
          <Styled(ViewNB)
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Styled(ViewNB)
              key="2018-10-06"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 1,
                    "borderColor": "grey",
                    "borderLeftWidth": 1,
                    "borderTopWidth": 1,
                    "padding": 10,
                  },
                  Object {
                    "backgroundColor": "lightgreen",
                  },
                  Object {
                    "borderColor": "grey",
                    "borderRightWidth": 1,
                  },
                ]
              }
            >
              <Styled(Text)
                style={
                  Object {
                    "color": "grey",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                Oct
              </Styled(Text)>
              <Styled(Text)
                style={
                  Object {
                    "color": "grey",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                6
              </Styled(Text)>
              <Styled(ViewNB)>
                <Styled(Icon)
                  name="checkmark-circle"
                  style={
                    Object {
                      "fontSize": 20,
                    }
                  }
                />
              </Styled(ViewNB)>
            </Styled(ViewNB)>
          </Styled(ViewNB)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Chicken component: Should render correctly when chicken ID passed in 1`] = `
<ChickenRenderer
  chicken={
    Object {
      "breed": "Cuckoo Maran",
      "hatched": "2016-10-05",
      "name": "Chicken1",
      "photoPath": "uploads/user:user1/flock:flock1/1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg",
      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
      "thumbnailPath": "uploads/user:user1/flock:flock1/thumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg",
      "thumbnailUrl": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2Fthumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=689dfae8-c034-46ae-9984-db5c4ee3fe72",
    }
  }
  chickenId="chicken1"
  handleMoreOptions={[Function]}
  navigation={
    Object {
      "getParam": [MockFunction] {
        "calls": Array [
          Array [
            "chickenId",
            "NO-ID",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "chicken1",
          },
        ],
      },
    }
  }
  nextChickenId="chicken2"
  prevChickenId={null}
  showModal={false}
  stats={
    Object {
      "heaviest": Object {
        "chickenId": "chicken1",
        "chickenName": "Chicken1",
        "date": "2018-02-13",
        "modified": "2018-02-13T13:45:46.640Z",
        "userId": "user1",
        "weight": "73.5",
      },
      "lastSevenDays": Object {
        "2018-05-09": 1,
        "2018-05-10": 0,
        "2018-05-11": 1,
        "2018-05-12": 1,
        "2018-05-13": 1,
        "2018-05-14": 0,
        "2018-05-15": 0,
      },
      "longestStreak": 10,
      "total": 78,
    }
  }
  toggleModal={[Function]}
/>
`;

exports[`Chicken component: Should render correctly when chicken not found 1`] = `
<Styled(Text)>
  Chicken with ID chicken5 not found
</Styled(Text)>
`;

exports[`Chicken component: Should render correctly when no chicken ID passed in 1`] = `
<Styled(Text)>
  No Chicken ID passed in!
</Styled(Text)>
`;
